FIX: Allow overflow for pop-up visibility (#1024)

--- a/assets/stylesheets/desktop/desktop.scss
+++ b/assets/stylesheets/desktop/desktop.scss
@@ -75,7 +75,6 @@
   .full-page-chat {
     border-right: 1px solid var(--primary-low);
     border-left: 1px solid var(--primary-low);
-    overflow: hidden;
 
     .channels-list {
       background: var(--primary-very-low);
